--- a/EcoHacks/main/templates/main/index.html
+++ b/EcoHacks/main/templates/main/index.html
@@ -1,4 +1,9 @@
-<h1> Hello </h1>
 
-
+<form action="/action_page.php" method="get">
+  <label for="location">Location:</label>
+  <input type="text" id="location" name="fname"><br>
+    <label for="dest">Destination:</label>
+  <input type="text" id="dest" name="fname"><br><br>
+  <input type="submit" value="Submit">
+</form>
 <button type="button" class="btn btn-primary" onclick="window.location.href='main/go-map'">Go</button>
