--- a/EcoHacks/main/templates/main/index.html
+++ b/EcoHacks/main/templates/main/index.html
@@ -7,5 +7,15 @@
   <label for="destination">Destination:</label>
   <input type="text" id="destination" name="destination">
   <br>
-  <input type="submit" value="Go to Map">
+  <input type="hidden" id="hidden-location" name="hidden-location">
+  <input type="hidden" id="hidden-destination" name="hidden-destination">
+  <br>
+  <input type="submit" value="Go to Map" onclick="updateHiddenFields()">
 </form>
+
+<script>
+function updateHiddenFields() {
+  document.getElementById('hidden-location').value = document.getElementById('location').value;
+  document.getElementById('hidden-destination').value = document.getElementById('destination').value;
+}
+</script>
