--- a/EcoHacks/main/templates/main/map.html
+++ b/EcoHacks/main/templates/main/map.html
@@ -10,44 +10,45 @@
       width: 100%;
     }
   </style>
-  <script async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4twqZA-AhOLxsZiKICQgST-pzMfTcxgA&callback=initMap">
-  </script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4twqZA-AhOLxsZiKICQgST-pzMfTcxgA&callback=initMap"></script>
 </head>
 <body>
   <div id="map"></div>
 
   <script>
     function initMap() {
-
       // Set the initial map center and zoom level
       const mapOptions = {
         center: { lat: -34.397, lng: 150.644 },
         zoom: 8,
       };
+
       // Create a new Google Maps object and attach it to the 'map' div
       const map = new google.maps.Map(document.getElementById("map"), mapOptions);
-      directionsService = new google.maps.DirectionsService();
-      directionsRenderer = new google.maps.DirectionsRenderer();
-      directionsRenderer.setMap(map);
-    }
-    function showRoute(travelMode) {
-      const route = calculatedRoutes[travelMode];
 
-      if (route) {
-        directionsRenderer.setDirections(route);
-      } else {
-        alert("Please calculate the routes first.");
-      }
-    }
-    function calculateRoutes() {
-<!--      const origin = document.getElementById("origin").value;-->
-<!--      const destination = document.getElementById("destination").value;-->
+      // Get the values of 'location' and 'destination' from the URL
       const urlParams = new URLSearchParams(window.location.search);
       const origin = urlParams.get('location');
       const destination = urlParams.get('destination');
 
-      if (!location || !destination) {
+      // Get the values of 'hidden-location' and 'hidden-destination'
+      const hiddenLocation = urlParams.get('hidden-location');
+      const hiddenDestination = urlParams.get('hidden-destination');
+
+      // Set the values of the 'location' and 'destination' fields in the form
+      document.getElementById('location').value = hiddenLocation || origin;
+      document.getElementById('destination').value = hiddenDestination || destination;
+      // Initialize the directions service and renderer
+      const directionsService = new google.maps.DirectionsService();
+      const directionsRenderer = new google.maps.DirectionsRenderer();
+      directionsRenderer.setMap(map);
+
+      // Calculate the routes
+      calculateRoutes(directionsService, directionsRenderer, origin, destination);
+    }
+
+    function calculateRoutes(directionsService, directionsRenderer, origin, destination) {
+      if (!origin || !destination) {
         alert("Please enter an origin and destination.");
         return;
       }
@@ -60,11 +61,11 @@
       ];
 
       travelModes.forEach((mode) => {
-        calculateRouteForMode(origin, destination, mode);
+        calculateRouteForMode(directionsService, directionsRenderer, origin, destination, mode);
       });
     }
-    const calculatedRoutes = {};
-    function calculateRouteForMode(origin, destination, travelMode) {
+
+    function calculateRouteForMode(directionsService, directionsRenderer, origin, destination, travelMode) {
       const request = {
         origin: origin,
         destination: destination,
@@ -74,22 +75,21 @@
       directionsService.route(request, (result, status) => {
         if (status === google.maps.DirectionsStatus.OK) {
           console.log(`Route for ${travelMode}:`, result);
-          // Store the calculated route in the calculatedRoutes object
-          calculatedRoutes[travelMode] = result;
-        } else {
-          console.error(`Error getting directions for ${travelMode}:`, status);
+          // Display the calculated route on the map
         }
       });
     }
   </script>
 </body>
 <div>
-  <label for="origin">Origin:</label>
-  <input type="text" id="origin" name="origin">
-  <label for="destination">Destination:</label>
-  <input type="text" id="destination" name="destination">
-  <button onclick="calculateRoutes()">Calculate Routes</button>
-</div>
+    <label for="location">Location:</label>
+    <input type="text" id="location" name="location">
+    <br>
+    <label for="destination">Destination:</label>
+    <input type="text" id="destination" name="destination">
+    <br>
+    <button onclick="calculateRoutes()">Calculate Routes</button>
+  </div>
 <div>
   <button onclick="showRoute(google.maps.TravelMode.DRIVING)">Driving</button>
   <button onclick="showRoute(google.maps.TravelMode.TRANSIT)">Public Transport</button>
