--- a/EcoHacks/main/templates/main/map.html
+++ b/EcoHacks/main/templates/main/map.html
@@ -3,17 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <div>
+  <label for="origin">Origin:</label>
+  <input type="text" id="origin" name="origin">
+  <label for="destination">Destination:</label>
+  <input type="text" id="destination" name="destination">
+  <button onclick="calculateRoutes()">Calculate Routes</button>
+  </div>
+  <div id="button-column">
+  <button onclick="showRoute(google.maps.TravelMode.DRIVING)">Driving</button>
+  <button onclick="showRoute(google.maps.TravelMode.TRANSIT)">Public Transport</button>
+  <button onclick="showRoute(google.maps.TravelMode.BICYCLING)">Biking</button>
+  <button onclick="showRoute(google.maps.TravelMode.WALKING)">Walking</button>
+  </div>
+
+
   <title>Google Maps Example</title>
   <style>
     #map {
       height: 400px;
-      width: 100%;
+      width: calc(100% - 300px);
+      padding-right: 30px;
+      float: right;
+    }
+    #button-column {
+      display: flex;
+      flex-direction: column;
+      height: 400px;
+      width: 20%;
+      float: left;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+    #controls > div {
+      margin-bottom: 20px;
     }
   </style>
   <script async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4twqZA-AhOLxsZiKICQgST-pzMfTcxgA&callback=initMap">
   </script>
 </head>
+
 <body>
   <div id="map"></div>
   <script>
@@ -116,30 +146,9 @@
     }
   </script>
 </body>
-<div>
-  <label for="origin">Origin:</label>
-  <input type="text" id="origin" name="origin">
-  <label for="destination">Destination:</label>
-  <input type="text" id="destination" name="destination">
-  <button onclick="calculateRoutes()">Calculate Routes</button>
-</div>
-<div>
-  <h3>Car Information</h3>
-  <label for="fuel-efficiency">Fuel Efficiency for Car(mpg):</label>
-  <input type="number" id="fuel-efficiency" name="fuel-efficiency" step="0.1">
-  <br>
-  <label for="fuel-type">Fuel Type for Car:</label>
-  <select id="fuel-type" name="fuel-type">
-    <option value="gas">Gas</option>
-    <option value="diesel">Diesel</option>
-  </select>
-</div>
-<div>
-  <button onclick="showRoute(google.maps.TravelMode.DRIVING)">Driving</button>
-  <button onclick="showRoute(google.maps.TravelMode.TRANSIT)">Public Transport</button>
-  <button onclick="showRoute(google.maps.TravelMode.BICYCLING)">Biking</button>
-  <button onclick="showRoute(google.maps.TravelMode.WALKING)">Walking</button>
-</div>
+
+
+
 <div>
   <span>Distance: <span id="distance"></span></span>
   <br>
