--- a/EcoHacks/users/templates/users/logout.html
+++ b/EcoHacks/users/templates/users/logout.html
@@ -1,11 +1,89 @@
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+   <style>
+     html, body {
+     display: flex;
+     justify-content: center;
+     height: 100%;
+     }
+     body, div, h1, form, input, p {
+     background-color: #ECFFD9;
+     padding: 0;
+     margin: 10;
+     outline: none;
+     font-family: Roboto, Arial, sans-serif;
+     font-size: 15px;
+     color: #666;
+     }
+     a {
+     position:absolute; right:44%; top:50%;
+     }
+     p1 {
+     position:absolute; left:45%; top:50%;
+     }
+     h1 {
+     width: 50%
+     margin: auto
+     padding: 10px 0;
+     font-size: 40px;
+     font-weight: 300;
+     text-align: left;
+     position: absolute;               /* 2 */
+     top: 50%;
+     center:50%;
+     transform: translate(-50%, -150%) }
+     }
 
+     hr {
+     color: #a9a9a9;
+     opacity: 0.3;
+     }
+
+     form {
+     position:absolute; left:770px; top:80px;
+     margin: 0 50px;
+     align-items: right;
+     }
+
+     input {
+
+     left: 500px
+     width: 150%;
+     height: 36px;
+     margin: 13px 0 0 -5px;
+     padding-left: 10px;
+     border-radius: 0 5px 5px 0;
+     border: solid 1px #cbc9c9;
+     box-shadow: 1px 2px 5px rgba(0,0,0,.09);
+     background: #fff;
+     }
+     .btn-block {
+     margin-top: 10px;
+     text-align: center;
+     }
+     button {
+     width: 100%;
+     padding: 10px 0;
+     margin: 10px auto;
+     border-radius: 5px;
+     border: none;
+     background: #437710;
+     font-size: 14px;
+     font-weight: 600;
+     color: #fff;
+     }
+     button:hover {
+     background: #2F540A;
+     }
+   </style>
 
 {% block content %}
-    <br>
-    <div class="alert alert-success" role="alert">
-        <h2 style="text-align: center;">Logged out!</h2>
-    </div>
+   <br>
+   <div class="alert alert-success" role="alert">
+       <h1 style="text-align: center;">Logged out!</h1>
+   </div>
 
-    <h3>Login again?</h3>
-    <a href="{% url 'login' %}">---> Login</a> <br>
+   <p1>Login again?</p1>
+   <a href="{% url 'login' %}">---> Login</a> <br>
 {% endblock content %}
+
